--- a/project.ipynb
+++ b/project.ipynb
@@ -7,14 +7,16 @@
    "outputs": [],
    "source": [
     "from time import time\n",
-    "from random import choice"
+    "import random\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluation function"
+    "### Evaluation function \n",
+    "#### !! (added one more input element -> book_scores)"
    ]
   },
   {
@@ -23,15 +25,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evalutate_solution(solution):\n",
-    "    pass"
+    "def evaluate_solution(solution, books_scores):\n",
+    "    books_scanned = []\n",
+    "    points = 0\n",
+    "    number_of_libraries = solution[0]\n",
+    "    #print(\"Num of libraries: \", number_of_libraries)\n",
+    "    for i in range(1, number_of_libraries+1):\n",
+    "        number_of_books = solution[i][1]\n",
+    "        #print(\"Num of books in libr: \",i, \":\", number_of_books)\n",
+    "        for j in range(number_of_books):\n",
+    "            book_to_add = solution[i][2][j]\n",
+    "            if book_to_add not in books_scanned:\n",
+    "                books_scanned.append(book_to_add)\n",
+    "                #print(\"add: \", book_to_add)\n",
+    "    #print(\"Books scanned: \", books_scanned)\n",
+    "    #print(\"Books scores: \", books_scores)\n",
+    "    solution_score = 0\n",
+    "    for i in books_scanned:\n",
+    "        solution_score += books_scores[i]\n",
+    "        \n",
+    "    return solution_score"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initial population"
+    "### Initial population\n",
+    "#### (changed 'from random import choice' to 'import random' and changed that in your code)"
    ]
   },
   {
@@ -45,7 +66,7 @@
     "    solution_indices = []\n",
     "    time_pointer = 0\n",
     "    while True:\n",
-    "        random_index = choice(list(range(libraries_number)))\n",
+    "        random_index = random.choice(list(range(libraries_number)))\n",
     "        random_library = libraries[random_index]\n",
     "        if time_pointer + random_library[0][1] > days_number:\n",
     "            break                                 \n",
@@ -108,7 +129,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crossover"
+    "## Crossover\n",
+    "#### !!! (Added an input param to get_children -> so also to get_offspring, did a function is_valid to be easier)"
    ]
   },
   {
@@ -117,11 +139,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_children(days_number, solution_a, solution_b):\n",
-    "    pass\n",
+    "def is_valid_child(child, days_number):\n",
+    "    sign_in_time = 0\n",
+    "    for i in range(1, child[0]):\n",
+    "        lib = child[i][0]\n",
+    "        sign_in_time += libraries[lib][0][1]\n",
+    "        while(sign_in_time > days_number):\n",
+    "            child = (child[0]-1,)+child[1:child[0]-1]\n",
+    "            is_valid_child(child)\n",
+    "    return child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_children(days_number, solution_a, solution_b, libraries):\n",
+    "    length_a = solution_a[0]\n",
+    "    length_b = solution_b[0]\n",
+    "    xpoint_a = int((length_a+1)/2)\n",
+    "    xpoint_b = int((length_b+1)/2)\n",
+    "    #print(xpoint_a, xpoint_b)\n",
+    "    \n",
+    "    chunk_a1 = solution_a[1:xpoint_a]\n",
+    "    chunk_a2 = solution_a[xpoint_a:]\n",
+    "    chunk_b1 = solution_b[1:xpoint_b]\n",
+    "    chunk_b2 = solution_b[xpoint_b:]\n",
+    "    a = (len(chunk_a1+chunk_b2))\n",
+    "    b = (len(chunk_b1+chunk_a2))\n",
+    "    children_a = (a,)+chunk_a1+chunk_b2\n",
+    "    children_b = (b,)+chunk_b1+chunk_a2\n",
+    "    #print(children_a)\n",
+    "    #print(children_b)\n",
     "\n",
-    "def get_offspring(days_number, population):\n",
-    "    pass"
+    "    is_valid_child(children_a, days_number)\n",
+    "    is_valid_child(children_b, days_number)\n",
+    "    \n",
+    "    return children_a , children_b\n",
+    "\n",
+    "def get_offspring(days_number, population, libraries):\n",
+    "    # let the population_size be EVEN\n",
+    "    offspring = tuple()\n",
+    "    for i in range (int(population_size/2)):\n",
+    "        offspring += get_children(days_number, population[i], population[i+1], libraries)\n",
+    "        \n",
+    "    return offspring"
    ]
   },
   {
@@ -140,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,24 +299,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
+     "evalue": "'<' not supported between instances of 'NoneType' and 'tuple'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-76b903923af4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0moffspring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_offspring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays_number\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mmutations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdo_mutations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpopulation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mpopulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moffspring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mpopulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmutations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mpopulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-7239e218f420>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mpopulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moffspring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mpopulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmutations\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mpopulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mpopulation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mpopulation_size\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mepochs_duration\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'NoneType' and 'tuple'"
      ]
     }
    ],
    "source": [
     "while epochs_duration[0] + max_duration >= time() + (epochs_duration[-1] - epochs_duration[-2]) * 2:\n",
-    "    offspring = get_offspring(days_number, population)\n",
+    "    offspring = get_offspring(days_number, population, libraries)\n",
     "    mutations = do_mutations(population)\n",
     "    population.extend(offspring)\n",
     "    population.extend(mutations)\n",
@@ -272,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -355,5 +419,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
