Fixed an issue in get_complete_solution().

--- a/project_with_evaluation.ipynb
+++ b/project_with_evaluation.ipynb
@@ -86,7 +86,7 @@
     "        books_per_day = libraries[i][0][2]\n",
     "        available_books = list(libraries[i][1])\n",
     "        particular_solution = [i, 0, []]\n",
-    "        available_books.sort(key = lambda x: books_scores[x])\n",
+    "        available_books.sort(key = lambda x: books_scores[x], reverse = True)\n",
     "        for x in available_books:\n",
     "            if len(particular_solution[2]) > time_pointer * books_per_day:\n",
     "                break\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -286,10 +286,11 @@
      "output_type": "stream",
      "text": [
       "For:  instances/a_example.txt solution is:  21\n",
-      "For:  instances/b_read_on.txt solution is:  4980700\n",
+      "For:  instances/b_read_on.txt solution is:  5052300\n",
       "For:  instances/c_incunabula.txt solution is:  1180242\n",
       "For:  instances/d_tough_choices.txt solution is:  4815330\n",
-      "For:  instances/e_so_many_books.txt solution is:  710638\n"
+      "For:  instances/e_so_many_books.txt solution is:  1630347\n",
+      "For:  instances/f_libraries_of_the_world.txt solution is:  1285568\n"
      ]
     }
    ],
@@ -339,9 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13963808\n"
+     ]
+    }
+   ],
    "source": [
     "print(total_solution)"
    ]
